--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@multiformats/blake2": "^2.0.2",
     "@storacha/blob-index": "^0.0.0",
     "@web3-storage/w3up-client": "^16.5.2",
+    "bytes": "^3.1.2",
     "carstream": "^2.2.0",
     "dotenv": "^16.4.5",
     "multiformats": "^13.3.1",
